@@ -141,7 +141,7 @@ abstract class CodeView {
 		$message = trim( $value );
 		$lines = explode( "\n", $message, 2 );
 		$first = $lines[0];
-		$trimmed = $wgLang->truncate( $first, 80, '...' );
+		$trimmed = $wgLang->truncate( $first, 80 );
 		return $this->formatMessage( $trimmed );
 	}
 	/*
