@@ -123,7 +123,7 @@ if ( !defined( 'MEDIAWIKI' ) )  die( 1 );
 				}
 	
 				$textlink = $this->mShowFilename ?
-					$sk->makeKnownLinkObj( $nt, htmlspecialchars( $wgLang->truncate( $nt->getText(), 20, '...' ) ) ) . "<br />\n" :
+					$sk->makeKnownLinkObj( $nt, htmlspecialchars( $wgLang->truncate( $nt->getText(), 20 ) ) ) . "<br />\n" :
 					'' ;
 			}
 			# ATTENTION: The newline after <div class="gallerytext"> is needed to accommodate htmltidy which
