@@ -632,12 +632,12 @@ class MV_SpecialMediaSearch {
 				continue;
 			}
 			-- $contextlines;
-			$pre = $wgContLang->truncate( $m[1], - $contextchars, '...' );
+			$pre = $wgContLang->truncate( $m[1], - $contextchars );
 
 			if ( count( $m ) < 3 ) {
 				$post = '';
 			} else {
-				$post = $wgContLang->truncate( $m[3], $contextchars, '...' );
+				$post = $wgContLang->truncate( $m[3], $contextchars );
 			}
 
 			$found = $m[2];
@@ -651,7 +651,7 @@ class MV_SpecialMediaSearch {
 		}
 		// if we found no matches just return the first line:
 		if ( $extract == '' )
-			return ' ' . $wgContLang->truncate( $text, ( $contextchars * 2 ), '...' ) . '';
+			return ' ' . $wgContLang->truncate( $text, ( $contextchars * 2 ) ) . '';
 		// wfProfileOut( "$fname-extract" );
 		// wfProfileOut( $fname );
 		// return "<li>{$link} ({$size}){$extract}</li>\n";
